--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:stylelint": "stylelint 'src/**/*.{css,scss,vue}'",
+    "lint": "yarn lint:eslint && yarn lint:stylelint"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +44,12 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.34",
-    "sass-embedded": "^1.81.0"
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.4.2",
+    "sass-embedded": "^1.81.0",
+    "typescript": "^5.7.2"
   }
 }
